...
        placeholder="search for tags"
        placeholderTextColor={theme.colors.secondary}
        value={draftQuery}
        onSubmitEditing={handleSearch}
        spellCheck={false}
        style={staticStyles.searchBar}
        testID="search_input"
      />
      <View style={staticStyles.filtersContainer}>
        <View style={staticStyles.segmentedSection}>
          <Text
            variant="labelLarge"
            style={[staticStyles.sectionLabel, { color: theme.colors.primary }]}
...
