...
      paddingRight,
    }),
    [shallowScreen, paddingLeft, paddingRight],
  )

  return (
    <View style={styles.container} testID="home_container">
      <SharedHeader
        backType={BackType.None}
        title={logoTitle}
        headerCenterStyle={styles.headerCenterStyle}
      />
      <ScrollView
...
        style={[styles.listContainer, listContainerStyles]}
        contentContainerStyle={styles.scrollContentContainer}
      >
        <View style={styles.columnsContainer}>
          <View style={styles.column}>
            <View style={listStyles.listHolder}>
              <HomeItem title="popular" leftIcon={PopularIcon} dest="Popular" />
              <Divider />
              <HomeItem title="classic" leftIcon={ClassicIcon} dest="Classic" />
              <Divider />
              <HomeItem title="easy" leftIcon={EasyIcon} dest="Easy" />
              <Divider />
              <HomeItem title="new" leftIcon={NewIcon} dest="New" />
...
