...
      icon={icon}
      iconColor={iconColor ?? theme.colors.onPrimary}
      size={icon === 'close' ? ICON_SIZE - 10 : ICON_SIZE}
      style={styles.button}
      mode="contained"
      onPress={() => (onBack ? onBack() : navigation.goBack())}
      testID="back_button"
      hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
    />
  )
}

const styles = StyleSheet.create({
...
