...
          }}
        />
        <Stack.Screen
          name="Data"
          component={DataScreen}
          options={{
            title: 'data',
            header: NavHeader,
            ...homeOrientation,
          }}
        />
      </Stack.Group>
    </Stack.Navigator>
...
