appId: com.fogcitysingers.goodtags
---
- launchApp:
    clearState: true
- waitForAnimationToEnd

# welcome screen
- assertVisible:
    id: welcome_forward_button
- takeScreenshot: ${SCREENSHOT_DIR}/01-welcome-screen

# home screen
- tapOn:
    id: welcome_forward_button
- assertVisible:
    id: home_container
- takeScreenshot: ${SCREENSHOT_DIR}/02-home-screen

# labels
- runFlow:
    file: _labels.yaml
    env:
        SEQ: 03

# popular tags list
- runFlow: 
    file: _popular.yaml
    env:
        SEQ: 04

# classic tags
- runFlow:
    when: 
      true: ${typeof QUICK_COLLECTIONS == 'undefined' || QUICK_COLLECTIONS == 0}
    file: _classic.yaml
    env:
        SEQ: 05
        

# easy tags
- runFlow:
    when: 
      true: ${typeof QUICK_COLLECTIONS == 'undefined' || QUICK_COLLECTIONS == 0}
    file: _easy.yaml
    env:
        SEQ: 06

# new tags
- runFlow:
    when: 
      true: ${typeof QUICK_COLLECTIONS == 'undefined' || QUICK_COLLECTIONS == 0}
    file: _new.yaml
    env:
        SEQ: 07

# sheet music interactions
- runFlow:
    file: _sheet-music.yaml
    env:
        SEQ: 08

# random tag
- runFlow:
    file: _random-tag.yaml
    env:
        SEQ: 09

# search
- runFlow:
    file: _search.yaml
    env:
        SEQ: 10

# options
- runFlow:
    file: _options.yaml
    env:
        SEQ: 11

# backup
- runFlow:
    file: _backup.yaml
    env:
        SEQ: 12

# favorites
- runFlow:
    file: _favorites.yaml
    env:
        SEQ: 13

# remove labels
- runFlow:
    file: _remove-labels.yaml
    env:
        SEQ: 14

# restore
- runFlow:
    file: _restore.yaml
    env:
        SEQ: 15

# favorites restored
- tapOn:
    text: "tab_faves"
- takeScreenshot: ${SCREENSHOT_DIR}/16-favorites-restored
- tapOn:
    text: "tab_home"

# labels restored
- runFlow:
    file: _labels-restored.yaml
    env:
        SEQ: 17

# history
- tapOn:
    text: "tab_history"
- takeScreenshot: ${SCREENSHOT_DIR}/18-history
- tapOn:
    text: "tab_home"

