appId: com.fogcitysingers.goodtags
---
# Fragment: restore
# Entry/Exit: home screen (home tab)

- tapOn:
    id: "data"
- takeScreenshot: ${SCREENSHOT_DIR}/${SEQ}-restore-01-data

- tapOn:
    id: "restore"
    repeat: 2
    delay: 1000
- waitForAnimationToEnd
- takeScreenshot: ${SCREENSHOT_DIR}/${SEQ}-restore-02-restore-clicked

- runFlow:
    commands:
      - tapOn:
            point: "8%, 30%"
            delay: 1000
      - waitForAnimationToEnd
      - takeScreenshot: ${SCREENSHOT_DIR}/${SEQ}-restore-03-restored

- tapOn:
    id: close_button

- tapOn:
    id: back_button
- waitForAnimationToEnd
